about text update

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,9 @@
     <h3 class="aboutHeader">Serving latest accurate weather data. We got you covered!</h3>
     <img class="expWeatherImg" src="/images/express-weather.png" alt="Express Weather Image" width="300px"
       height="100px" />
-    <h3>App developed and maintained by {{ authorName }}</h3>
+
+    <h3 class="aboutBody">This service is provided with the help of secure API services from Mapbox.com and Darksky.net</h3>
+    <h3 class="aboutBody">App developed and maintained by {{ authorName }}</h3>
   </main>
 
 
