today and tomorrow's high & low temp display

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,6 +13,7 @@
     </form>
 
     <p class="displayDataTop"></p>
+    <p class="displayDataMiddle"></p>
     <p class="displayDataBottom"></p>
 
     <div>
